--- a/src/assets/scss/components/_features.scss
+++ b/src/assets/scss/components/_features.scss
@@ -16,7 +16,7 @@
 		list-style: none;
 
 		li {
-			width: calc(#{(100% / 5)} - #{_size(element-margin)});
+			width: calc(#{(100% / 4)} - #{_size(element-margin)});
 			margin-left: _size(element-margin);
 			margin-top: (_size(element-margin) * 1.5);
 			padding: 0;
@@ -54,7 +54,8 @@
 				margin-top: _size(element-margin);
 
 				&:nth-child(2),
-				&:nth-child(3) {
+				&:nth-child(3),
+				&:nth-child(4){
 					margin-top: _size(element-margin);
 				}
 			}
