--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,3 +1,5 @@
+@import '../../../node_modules/bootstrap-css-only/css/bootstrap.min.css';
+@import '../../../node_modules/mdbreact/dist/css/mdb.css';
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
@@ -61,6 +63,7 @@
 	@import 'components/features';
 	@import 'components/statistics';
 	@import 'components/spotlight';
+	@import 'components/oneplanetnav';
 
 // Layout.
 
