--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -6,7 +6,7 @@
 @import 'libs/skel';
 @import '../css/font-awesome.min.css';
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400');
-
+@import url('https://fonts.googleapis.com/css?family=Mukta:300,400|Roboto+Slab');
 /*
 	Stellar by HTML5 UP
 	html5up.net | @ajlkn
