added project container section, rewrote project pages. Need to make data template

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -65,6 +65,7 @@
 	@import 'components/statistics';
 	@import 'components/spotlight';
 	@import 'components/oneplanetnav';
+	@import 'components/projectslist';
 
 // Layout.
 
