--- a/src/assets/scss/libs/_vars.scss
+++ b/src/assets/scss/libs/_vars.scss
@@ -56,5 +56,16 @@
 		accent4:			#9bb2e1,
 		accent5:			#8cc9f0,
 		bg1:				#e37682,
-		bg2:				#5f4d93
+		bg2: #5f4d93,
+
+		health:  #ffb319,
+		equity: #8dc63f,
+		culture: #1ab349,
+		land: #00a099,
+		water: #00b3f6,
+		food: #0089d3,
+		materials: #f40090,
+		transport: #bc1998,
+		waste: #ed1651,
+		carbon: #ff7119,
 	);
