--- a/src/assets/scss/layout/_nav.scss
+++ b/src/assets/scss/layout/_nav.scss
@@ -4,7 +4,7 @@
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
 
-/* Nav */
+/* HomePageNav */
 
 	#nav {
 		@include vendor('transition', (
@@ -49,7 +49,7 @@
 					display: inline-block;
 					height: 2.25em;
 					line-height: 2.25em;
-					padding: 0 1.25em;
+					padding: 0 0.5em;
 					border: 0;
 					//border-radius: _size(border-radius);
 					box-shadow: inset 0 0 0 1px transparent;
