remove blurb from features

--- a/src/assets/scss/components/_icon.scss
+++ b/src/assets/scss/components/_icon.scss
@@ -19,13 +19,16 @@
 			display: none;
 		}
 
+		&:hover {
+			cursor: pointer;
+		}
+
 		&.major {
 			border: solid 1px;
 			display: inline-block;
 			border-radius: 100%;
 			padding: 0.65em;
 			margin: 0 0 _size(element-margin) 0;
-			cursor: default;
 
 			&:before {
 				display: inline-block;
