--- a/src/assets/scss/components/_features.scss
+++ b/src/assets/scss/components/_features.scss
@@ -15,6 +15,8 @@
 		padding: 0;
 		list-style: none;
 
+		&
+
 		li {
 			width: calc(#{(100% / 4)} - #{_size(element-margin)});
 			margin-left: _size(element-margin);
