--- a/src/assets/scss/components/_features.scss
+++ b/src/assets/scss/components/_features.scss
@@ -60,17 +60,19 @@
 		@include breakpoint(small) {
 			width: 100%;
 			margin: 0 0 _size(element-margin) 0;
-
-			li {
-				width: 100%;
-				margin-left: 0;
-				margin-top: _size(element-margin);
-
-				&:nth-child(2),
-				&:nth-child(3),
-				&:nth-child(4){
+			&.oneplanet,&.project {
+				li {
+					width: 100%;
+					margin-left: 0;
 					margin-top: _size(element-margin);
+	
+					&:nth-child(2),
+					&:nth-child(3),
+					&:nth-child(4){
+						margin-top: _size(element-margin);
+					}
 				}
 			}
+
 		}
 	}
