--- a/src/assets/scss/components/_features.scss
+++ b/src/assets/scss/components/_features.scss
@@ -51,9 +51,9 @@
 			li {
 				width: calc(#{(100% / 2)} - #{_size(element-margin)});
 
-				&:nth-child(3) {
-					margin-top: (_size(element-margin) * 1.5);
-				}
+				// &:nth-child(3) {
+				// 	margin-top: (_size(element-margin) * 1.5);
+				// }
 			}
 		}
 
@@ -66,11 +66,11 @@
 					margin-left: 0;
 					margin-top: _size(element-margin);
 	
-					&:nth-child(2),
-					&:nth-child(3),
-					&:nth-child(4){
-						margin-top: _size(element-margin);
-					}
+					// &:nth-child(2),
+					// &:nth-child(3),
+					// &:nth-child(4){
+					// 	margin-top: _size(element-margin);
+					// }
 				}
 			}
 
