--- a/src/assets/scss/libs/_vars.scss
+++ b/src/assets/scss/libs/_vars.scss
@@ -49,12 +49,12 @@
 			border2-bg:		rgba(222,222,222,0.5),
 		),
 
-		accent:				#8cc9f0,
-		accent1:			#efa8b0,
-		accent2:			#c79cc8,
-		accent3:			#a89cc8,
-		accent4:			#9bb2e1,
-		accent5:			#8cc9f0,
+		accent:				#ec0a24,
+		accent1:				#ec0a24,
+		accent2:			#72061b,
+		accent3:			#7162b6,
+		accent4:			#15af54,
+		accent5:			#5e32a5,
 		bg1:				#e37682,
 		bg2: #5f4d93,
 
