--- a/src/assets/scss/components/_projectslist.scss
+++ b/src/assets/scss/components/_projectslist.scss
@@ -6,6 +6,6 @@
         color: white!important;
     }
     #active {
-        background-color: #86d6e9 !important;
+        background-color: _palette(accent)!important;
     }
 }
