--- a/src/assets/scss/libs/_vars.scss
+++ b/src/assets/scss/libs/_vars.scss
@@ -49,8 +49,8 @@
 			border2-bg:		rgba(222,222,222,0.5),
 		),
 
-		accent:				#ec0a24,
-		accent1:				#ec0a24,
+		accent:				#86d6e9,
+		accent1:			#ec0a24,
 		accent2:			#72061b,
 		accent3:			#7162b6,
 		accent4:			#15af54,
