--- a/src/assets/scss/components/_features.scss
+++ b/src/assets/scss/components/_features.scss
@@ -48,8 +48,22 @@
 
 		li {
 			margin-left: _size(element-margin);
+			margin-bottom: 20px;
 			padding: 0;
+			box-shadow: 1px 1px 1px 1px grey;
 
+			div {
+				display: flex;
+				flex-direction: column;
+				.plus {
+					align-self: flex-end;
+					margin-right: 5px;
+
+					&:hover {
+						color: _palette(accent);
+					}
+				}
+			}
 			a {
 				border-bottom: none;
 			}
@@ -81,7 +95,6 @@
 				li {
 					width: 100%;
 					margin-left: 0;
-					margin-top: _size(element-margin);
 	
 					// &:nth-child(2),
 					// &:nth-child(3),
