--- a/src/assets/scss/components/_icon.scss
+++ b/src/assets/scss/components/_icon.scss
@@ -24,11 +24,9 @@
 		}
 
 		&.major {
-			border: solid 1px;
 			display: inline-block;
-			border-radius: 100%;
-			padding: 0.65em;
-			margin: 0 0 _size(element-margin) 0;
+			padding: 0.2em;
+			margin: 0 0 1em 0;
 
 			&:before {
 				display: inline-block;
