--- a/src/assets/scss/components/_features.scss
+++ b/src/assets/scss/components/_features.scss
@@ -55,6 +55,7 @@
 			div {
 				display: flex;
 				flex-direction: column;
+				padding: 5px;
 				.plus {
 					align-self: flex-end;
 					margin-right: 5px;
