--- a/src/assets/scss/layout/_main.scss
+++ b/src/assets/scss/layout/_main.scss
@@ -14,6 +14,10 @@
 			@include padding(5em, 5em);
 			border-top: solid 1px _palette(invert, border);
 
+			.event {
+
+			}
+
 			&:first-child {
 				border-top: 0;
 			}
