--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,5 +1,5 @@
 @import '../../../node_modules/bootstrap-css-only/css/bootstrap.min.css';
-@import '../../../node_modules/mdbreact/dist/css/mdb.css';
+// @import '../../../node_modules/mdbreact/dist/css/mdb.css';
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
