--- a/src/assets/scss/components/_features.scss
+++ b/src/assets/scss/components/_features.scss
@@ -21,10 +21,15 @@
 			li {
 				width: calc(#{(100% / 5)} - #{_size(element-margin)});
 				.headshot {
+
 					img {
 						width: 100%;
 						border-radius: 100%;
 
+					}
+					h3 {
+						text-align: center;
+						margin-bottom: 0px;
 					}
 
 				}
