update event style

--- a/src/assets/scss/components/_section.scss
+++ b/src/assets/scss/components/_section.scss
@@ -14,8 +14,9 @@
 
 	.event {
 		margin: 10px 0;
-		border: 2px solid red;
-		padding: 10px;
+		box-shadow: 2px 1px 2px 2px grey;
+		border: 0.5px solid red;
+		padding: 20px 40px;
 	}
 
 	header {
