--- a/src/assets/scss/components/_icon.scss
+++ b/src/assets/scss/components/_icon.scss
@@ -103,8 +103,8 @@
 			color: _palette(materials);
 		}
 
-		&.transport {
-			color: _palette(transport);
+		&.mobility {
+			color: _palette(mobility);
 		}
 
 		&.waste {
