--- a/src/assets/scss/libs/_vars.scss
+++ b/src/assets/scss/libs/_vars.scss
@@ -65,7 +65,7 @@
 		water: #00b3f6,
 		food: #0089d3,
 		materials: #f40090,
-		transport: #bc1998,
+		mobility: #bc1998,
 		waste: #ed1651,
 		carbon: #ff7119,
 	);
