--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -64,8 +64,9 @@
 	@import 'components/features';
 	@import 'components/statistics';
 	@import 'components/spotlight';
-	@import 'components/oneplanetnav';
+	@import 'components/workgroupnav';
 	@import 'components/projectslist';
+@import "components/member-profile";
 
 // Layout.
 
