--- a/src/assets/scss/components/_workgroupnav.scss
+++ b/src/assets/scss/components/_workgroupnav.scss
@@ -54,8 +54,8 @@
     background-color: _palette(materials);
   }
 
-  &.transport {
-    background-color: _palette(transport);
+  &.mobility {
+    background-color: _palette(mobility);
   }
 
   &.waste {
