--- a/src/assets/scss/components/_features.scss
+++ b/src/assets/scss/components/_features.scss
@@ -109,7 +109,7 @@
 		@include breakpoint(small) {
 			width: 100%;
 			margin: 0 0 _size(element-margin) 0;
-			&.profile-pictures,&.oneplanet,&.project {
+			&.profile-pictures,&.oneplanet,&.project, &.workgroup {
 				li {
 					width: 100%;
 					margin-left: 0;
